# scribe

./: .env.example  README.md  buy-main-domain.txt  choose-operating-name.txt  pyproject.toml
scribe/: cli.py  config.py  models.py  utils.py
scribe/ai/: analyzer.py  summarizer.py
scribe/transcription/: audio.py  base.py  deepgram_provider.py  youtube.py
